[tool.poetry]
name = "networkml"
version = "0.1.1"
description = "Machine Learning model for use in determining device classes based on packet headers."
authors = ["Ryan <rashley@iqt.org>"]
license = "Apache 2.0"
include = [
    "networkml/trained_models/*.*",
    "networkml/*.py",
]

[tool.poetry.dependencies]
python = ">=3.8 <3.11"
cython = "0.29.30"
humanize = "4.2.3"
joblib = "1.1.0"
netaddr = "0.8.0"
numpy = "1.23.1"
pandas = "1.4.3"
pbr = "5.9.0"
pyshark = "0.5.3"
scikit-learn = "1.1.1"
scipy = "1.8.1"

#optional dependencies
pygments = { version = "2.12.0", optional = true }
pytest = { version = "7.1.2", optional = true }
pytest-cov = { version = "3.0.0", optional = true }
pytest-xdist = { version = "2.5.0", optional = true }
pytest-rabbitmq = { version = "2.2.1", optional = true }
nest_asyncio = { version = "1.5.5", optional = true }
MarkupSafe = { version = "2.1.1", optional = true }
notebook = { version = "6.4.12", optional = true }

[tool.poetry.extras]
test = [
"pygments",
"pytest",
"pytest-cov",
"pytest-xdist",
"pytest-rabbitmq",
"nest_asyncio",
"MarkupSafe",
"notebook",
"pytype",
]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
networkml = 'networkml.__main__:main'
