[metadata]
name = networkml
summary = Device Functional Role ID via Machine Learning and Network Traffic Analysis
license = Apache-2
author = cglewis
author-email = clewis@iqt.org
home-page = https://github.com/IQTLabs/NetworkML
platform = any
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python

[entry_points]
console_scripts =
    networkml = networkml.__main__:main
